# traffic-safety-warning-cpp

./: .gitignore  CMakeLists.txt  README.md  build_mac.sh  build_windows.bat
data/: sample_detections.csv
reports/: AI車輛與行人辨識警示系統_Cpp期末報告PPT_正式版.pptx  教授版_程式設計期末報告_AI車輛與行人辨識警示系統_正式版.docx
src/: main.cpp
